# ergo

./: README.md  pyproject.toml
samples/: hello-world.ergo
src/ergo/: __init__.py  lexer.py  parser.py  tokens.py  util.py
